aks/load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-resource-group: myResourceGroup
  name: azure-load-balancer
spec:
  loadBalancerIP: 52.232.123.114
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: azure-load-balancer
