aks/shoppgingapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shoppingapi-deployment
  labels:
    app: shoppingapi
spec:
  selector:
    matchLabels:
      app: shoppingapi
  replicas: 1
  template:
    metadata:
      labels:
        app: shoppingapi
    spec:
      containers:
      - name:  shoppingapi
        image: kinderdllacr.azurecr.io/shoppingapi:latest
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 80
        resources:
          requests:
            cpu: "0.1"
            memory: "64Mi"
          limits:
            cpu: "0.3"
            memory: "128Mi"
      imagePullSecrets:
        - name: acr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: shoppingapi-service
spec:
  selector:
    app: shoppingapi
  ports:
    - protocol: TCP
      port: 80
