aks/shoppingclient.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shoppingclient-deployment
  labels:
    app: shoppingclient
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shoppingclient
  template:
    metadata:
      labels:
        app: shoppingclient
    spec:
      containers:
        - name: shoppingclient
          image: kinderdllacr.azurecr.io/shoppingclient:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "256Mi"
              cpu: "0.1"
            limits:
              memory: "512Mi"
              cpu: "0.3"
      imagePullSecrets:
        - name: acr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: shoppingclient-service
spec:
  #type: LoadBalancer
  selector:
    app: shoppingclient
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shoppingclient-ingress
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: shoppingclient-service
            port:
              number: 80
